# ydjr

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.archlinux  Dockerfile.debian-apt  Dockerfile.debian-bundled  download-test-files.sh  prek.toml  readme.md
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-0e2129fa1949dbe5a40787be0f4897e2fbd5699f6d83c4d90a90fb7c97b789af.json  query-13bfb4a92111b6a792852ddc9efc7c8d8fe912103667e14b79dcfba4d145e56e.json  query-1c8eeeff5207b63a9ee803868c726ada85e9f6c554d21f3a1f08f7b3b0959e3d.json  query-2a400bc9d31aa3bb6ca352a2985d8965ba3b11ede82a0f9d868df985a4a36724.json  query-4c74aeeb056982a4397d483c50debec5f1cbab2422ed938c0b437c3b4cef3f95.json  query-67778dff2e1b902c9332eba688d718ed6c3239b3600b969425be0d3b065caca1.json  query-69f2aa4d5cdfd9313b1e58ea72063285a9e85796e80a938edbb9d68656ae5f48.json  query-8f8085138b1ca0ce9f1bb53d3f08210543d4f9dce46419261ce123ff3254e478.json  query-a4161c19060ddf0e1d23a985d1568dbe7e82217019b47026a8631353eee0515a.json  query-bd21b267c5b8032ecdaf6ae94da7ce6ca32091c7dd9785fbc050ff747f51b3d4.json  query-cdef21ef97ab9cdc82eb4ce6d116f3636dd8adf043bd9fb999d18b2e4fc8502e.json
migrations/: 20260413192924_init.down.sql  20260413192924_init.up.sql  20260414183535_json_to_jsonb.down.sql  20260414183535_json_to_jsonb.up.sql  20260418184648_add-failed-videos-table.down.sql  20260418184648_add-failed-videos-table.up.sql  20260418204924_add-video-metadata-view.down.sql  20260418204924_add-video-metadata-view.up.sql  20260502170841_add-mediainfo-column.down.sql  20260502170841_add-mediainfo-column.up.sql
src/: lib.rs  main.rs
