[package]
name = "ydjr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
matroska = "0.30.1"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "migrate", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
walkdir = "2.5.0"
