[package]
name = "ydjr"
version = "0.1.0"
description = "CLI utility to ingest embedded json metadata from yt-dlp downloads to a SQLite database file"
readme = "readme.md"
repository = "https://github.com/0xBA5E64/ydjr"
license = "GPLv3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
indicatif = "0.18.4"
indicatif-log-bridge = "0.2.3"
log = "0.4.29"
matroska = "0.30.1"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "migrate", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
walkdir = "2.5.0"
