[package]
name = "ydjr"
version = "0.1.0"
description = "CLI utility to ingest embedded json metadata from yt-dlp downloads to a SQLite database file"
readme = "readme.md"
repository = "https://github.com/0xBA5E64/ydjr"
license = "GPLv3"
edition = "2024"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
env_logger = "0.11.11"
indicatif = "0.18.6"
indicatif-log-bridge = "0.2.3"
log = "0.4.33"
matroska = "0.30.1"
rsmediainfo = "0.2.0"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["sqlite", "migrate", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"
